refactor: migrate console output styling to Text Placeholder API (#48)
* refactor: migrate console output styling to Text Placeholder API

Replace the hand-rolled ColoredTextBuilder chains with QuickText tag
templates parsed by Text Placeholder API (eu.pb4:placeholder-api,
bundled via jar-in-jar).

- Add StyledText utility: template parsing plus automatic
  colored/plain fallback based on enableColoredOutput and source type
- Unify MobCapFormatter colored/plain dual implementations into
  single template builders
- Add TPS/MSPT threshold coloring and click actions
  (TPS value runs /suMspt, dimension name runs /suMobCap <id> debug)
- Add /suCpu and /suMem commands with permission level settings
- Remove ColoredTextBuilder
- Document bundled third-party licenses in README

* fix: address review feedback on system info output

- Use OperatingSystemMXBean#getCpuLoad instead of deprecated
  getSystemCpuLoad
- Show N/A when CPU load, load average, or max memory size is
  unavailable (negative values)
- Log full stack traces when system info retrieval fails

* fix: renormalize gradlew.bat line endings in index

The Gradle wrapper 9.3.1 bump committed gradlew.bat with CRLF stored
in the blob, contradicting the .gitattributes rule (text eol=crlf,
which expects LF-normalized blobs). Every fresh checkout therefore
reported gradlew.bat as modified, causing the formatting workflow to
post a false "formatting issues detected" comment on each PR run.

* fix: harden system info retrieval against JVM differences

- Keep osBean field as the standard OperatingSystemMXBean and access
  the com.sun.management extension via pattern-matching instanceof,
  so a JVM without the extension no longer breaks class
  initialization for all commands in this class
- Send error feedback through StyledText in red for style
  consistency with other error messages